# multi_rtos

./: .clang-format  CMakeLists.txt  Makefile  build.sh  readme  setup_win.sh
app/: CMakeLists.txt  ezos.c  freertos.c  main.c  rt_thread.c  threadx.c
doc/: freertos.md  lab1.md  lab2.md  qemu.md  rt_thread.md
driver/: CMakeLists.txt  ns16550.c  ns16550.h
include/: CMakeLists.txt  ez_cfg.h  riscv-reg.h  riscv-virt.h
kernel/: CMakeLists.txt
kernel/ezos/: CMakeLists.txt
kernel/ezos/inc/: ez.h  ezdef.h
kernel/ezos/src/: ez_core.c  ez_task.c  ez_var.c
kernel/freertos/: CMakeLists.txt
kernel/include/: ez.h  ezdef.h
kernel/rt_thread/: CMakeLists.txt
kernel/rt_thread/inc/: rtscheduler.h
kernel/rt_thread/src/: clock.c  rt_scheduler.c
kernel/source/: ez_core.c  ez_task.c
kernel/threadx/: CMakeLists.txt
port/ezos/: ez_cfg.h
port/ezos/riscv/: CMakeLists.txt  port.c  portASM.S
port/freertos/: CMakeLists.txt  FreeRTOSConfig.h
port/freertos/riscv/: freertos_risc_v_chip_specific_extensions.h  port.c  portASM.S
port/rt_thread/: CMakeLists.txt  rtconfig.h
port/rt_thread/riscv/: CMakeLists.txt  cpuport.c  cpuport.h  interrupt_gcc.S  port.c  portASM.S  readme.md  trap_common.c
port/threadx/riscv/: CMakeLists.txt  port.c  tx_initialize_low_level.S  tx_thread_context_restore.S  tx_timer_interrupt.c  tx_user.h
portable/: CMakeLists.txt  ez_cpu.c  isr.c  portASM.S  riscv-virt.c
soc/: CMakeLists.txt
soc/common/: CMakeLists.txt  common.c  common.h  data_type.h
soc/console/: CMakeLists.txt  console.c  console.h
soc/cpu/riscv/: CMakeLists.txt  cpu.c  cpu.h  isr.c  riscv-reg.h  start.S
